ifc-macros/test/variables.stderr
warning: All variables are `High` by default
 --> test/variables.rs:6:15
  |
6 |         #[IFC(High)]
  |               ^^^^
  |
  = help: Try removing `High`

error: Warning_Error
  --> test/variables.rs:15:5
   |
15 |     compile_error!("Warning_Error");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
